--- a/Index.html
+++ b/Index.html
@@ -17,11 +17,12 @@
         </div>
     </nav>
 
-    <div ng-view></div>
+    <div id="divView" ng-view></div>
 
     <!-- Vendor Libs: jQuery only used for Bootstrap functionality -->
     <script src="libs/angular.js"></script>
     <script src="libs/angular-route.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.9/angular-animate.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <!-- UI Libs -->
