--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
 
     <!-- UI Libs -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
 
     <!-- App libs -->
     <script src="app/app.js"></script>
@@ -36,6 +36,8 @@
     <script src="app/controllers/CustomersController.js"></script>
     <script src="app/controllers/OrdersController.js"></script>
     <script src="app/controllers/OrdersTemplateController.js"></script>
+    <script src="app/controllers/CustomerEditController.js"></script>
+    <script src="app/controllers/OrderEditController.js"></script>
     <script src="app/services/customersService.js"></script>
 </body>
 </html>
