--- a/Index.html
+++ b/Index.html
@@ -2,33 +2,45 @@
 <html data-ng-app="app">
 <head>
     <title>AngularJS Project</title>
-    <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/sb-admin.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-default">
-        <div class="container-fluid">
-            <div>
-                <ul class="nav navbar-nav">
+    <div id="wrapper">
+        <!-- Navigation -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <a class="navbar-brand" href="">AngularJS Project</a>
+            </div>
+            <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav side-nav">
                     <li data-ng-class="{'active':getClass('/customers')}"><a href="#/customers">All Customers</a></li>
                     <li data-ng-class="{'active':getClass('/orders')}"><a href="#/orders">All Orders</a></li>
                 </ul>
             </div>
+            <!-- /.navbar-collapse -->
+        </nav>
+        <div id="page-wrapper">
+            <div class="container-fluid">
+                <div id="divView" ng-view></div>
+            </div>
+            <!-- /.container-fluid -->
         </div>
-    </nav>
-
-    <div id="divView" ng-view></div>
+        <!-- /#page-wrapper -->
+    </div>
+    <!-- /#wrapper -->
 
     <!-- Vendor Libs: jQuery only used for Bootstrap functionality -->
     <script src="libs/angular.js"></script>
     <script src="libs/angular-route.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.9/angular-animate.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
     <!-- UI Libs -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
-
     <!-- App libs -->
     <script src="app/app.js"></script>
     <script src="app/controllers/IndexController.js"></script>
@@ -39,5 +51,7 @@
     <script src="app/controllers/CustomerEditController.js"></script>
     <script src="app/controllers/OrderEditController.js"></script>
     <script src="app/services/customersService.js"></script>
+    <script src="app/services/usersPostsService.js"></script>
 </body>
+
 </html>
